<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_traffic</name>
  <version>0.0.1</version>
  <description>Package for managing traffic in the Robotics Middleware Framework</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmf_utils</build_depend>
  <build_export_depend>rmf_utils</build_export_depend>

  <build_depend>libccd-dev</build_depend>
  <build_depend>libfcl-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
