<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_utils</name>
  <version>1.1.0</version>
  <description>Simple C++ programming utilities used by Robotics Middleware Framework packages</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
